cloudformation.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: DevQAOps Portfolio Website on EC2 using Docker

Parameters:
  KeyName:
    Description: EC2 Key Pair for SSH access
    Type: AWS::EC2::KeyPair::KeyName
    Default: devops-key

Resources:
  PortfolioSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP and SSH access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  PortfolioEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      ImageId: ami-0c02fb55956c7d316
      SecurityGroups:
        - !Ref PortfolioSecurityGroup
      Tags:
        - Key: Name
          Value: DevQAOps-Portfolio-Server
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y docker git
          systemctl start docker
          systemctl enable docker

          cd /home/ec2-user
          git clone https://github.com/sssec81/devqaops-portfolio.git
          cd devqaops-portfolio

          docker build -t devqaops-portfolio .
          docker run -d -p 80:80 --name devqaops-portfolio devqaops-portfolio

Outputs:
  WebsiteURL:
    Description: Portfolio website URL
    Value: !Sub "http://${PortfolioEC2Instance.PublicIp}"

  PublicIP:
    Description: EC2 Public IP
    Value: !GetAtt PortfolioEC2Instance.PublicIp
